--- a/Teleasis-website/Teleasis-website.csproj
+++ b/Teleasis-website/Teleasis-website.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Firebase.Auth" Version="1.0.0" />
+    <PackageReference Include="FirebaseDatabase.net" Version="4.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
   </ItemGroup>
 
