--- a/Teleasis-website/Teleasis-website.csproj
+++ b/Teleasis-website/Teleasis-website.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\NewFolder\" />
+  </ItemGroup>
+
 </Project>
